 * Splitted "read reties" and "ignore read errors" for data and audio sectors in cd copy and set new
   defaults for audio sectors which make more sense: 5 retires and skip unreadable sectors.
 * New Mediamanager which makes K3b always know which device contains which medium. This makes medium handling 
   more smooth and the user now selects a medium instead of a device.
 * dcop call directBurn() returns a boolean value now stating if the process could be started.
 * New dcop call cddaRip() with media:// url support including a mediadialog entry
 * K3b can now handle media:/ urls from the commandline to specify devices

0.12
Added "Mpeg Still" support to Video-CD Project
FreeBSD support (thanks to Adriaan De Groot)
Support for all global CD-Text fields with cdrecord.
Some GUI changes: cleaned up the action dialogs, moved the burnfree option to the global settings dialog
	since turning it off should be a very seldomly used task.
Added support for multiple copies to the projects.
Added missed VCD 3.0 track interpretation option for SVCD's
New Lame encoding plugin providing a proper configuration dialog.
Added Bookmarks to the file browser.
Fixed window layering problem with windowmanagers != kwm
Added KPart plugin which converts a list of audio files into one of the supported encoder formats.
Allow disabling of CD-Text reading in cd-copy to overcome problems with CD-Text on some drives.
Check CD-Text crc when copying
Fixed incorrect PBC order, PBC now should work on all "standalone" DVD Players
Fixed waittime bug for PBC infinite timeout.
Import Audio Cue files into an audio project.
It is now possible to open an iso image or an audio cue file just like a project file.
Create cue files for an audio CD ripped into one single file
Show writer buffer state in addition to fifo buffer when writing CDs.
Show device buffer state for DVD writing (does not work always yet)
Fixed read and save setting in VideoCD project.